fix(ui): Fixed 1password extension adding scrolling to some pages
The chrome extention for some reason is adding a scrollbar to some pages
because of how its rendering a live region element?

--- a/interface/src/styles/styles.css
+++ b/interface/src/styles/styles.css
@@ -71,6 +71,14 @@ input[type=number] {
   overflow-x: unset !important;
 }
 
+/*
+ Fix some weird 1password thing thats being inserted by the chrome extention?
+ Web development is great...
+*/
+#\31 p-live-region {
+  display: none;
+}
+
 .transactions-item .transaction-select__control {
   background-color: transparent;
 }
